bug squashing

--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -2578,7 +2578,7 @@ textarea.traitsLocation {
     align-items: center;
 }
 
-.stressShell {
+.stressShell, .editingStressThreshold {
     display: flex;
     justify-content: space-between;
 }
@@ -2586,7 +2586,21 @@ textarea.traitsLocation {
 .stressShell div {
     display: flex;
     align-items: center;
-    width: 50%;
+    width: 24%;
+}
+
+.editingStressThreshold div {
+    display: flex;
+    align-items: center;
+}
+
+.editingStressThreshold div:first-child {
+    width: 70%;
+    margin-right: 5px;
+}
+
+.editingStressThreshold div:last-child {
+    width: 30%;
 }
 
 .stressShell div p, .stressShell div input {
@@ -2595,6 +2609,11 @@ textarea.traitsLocation {
 
 .stressShell div:first-child {
     border: 2px solid #990000;
+    width: 49%;
+}
+
+.stressShell div:last-child {
+    border-left: 2px solid lightgrey
 }
 
 .stressShell div p:first-child, .editingStressThreshold p {
@@ -2603,8 +2622,24 @@ textarea.traitsLocation {
     padding-top: 2px;
 }
 
+.stressShell div:last-child p:first-child {
+    font-family: 'Vollkorn SC', serif;
+    margin: 0;
+    font-weight: normal;
+    font-size: 10px;
+    padding-left: 5px;
+}
+
+.stressShell div:last-child p:last-child {
+    text-align: center;
+}
+
 .editingStressThreshold input, .editingStressThreshold p {
     width: 50%;
+}
+
+.editingStressThreshold div:first-child p {
+    width: 75%;
 }
 
 #not-found { 
